se coloca filtro en la lista de tareas del alumno modulo profesor estilos animacion y funcionalidad

--- a/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
@@ -42,7 +42,8 @@
     <ui:define name="contenido">
         <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/tablas.css"/>
         <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/graficas.css"/>
-        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/profesor/tarea-alumno.css"/>
+<!--        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/profesor/tarea-alumno.css"/>-->
+        <link rel="stylesheet" href="#{resource['css/profesor/tarea-alumno.css']}"/>
 
         <div class="uk-margin-large-top"><h1 class="uk-margin-top uk-text-capitalize lescuadron">#{profesor['tareas.alumno.title']}</h1></div>
 
@@ -120,6 +121,16 @@
                                 </div>
                             </div>
                             <div class="padding-0">
+                                <label for="filtro-nivel">Level:</label>
+                                <select name="" id="filtro-nivel">
+                                    <option value="">Selection</option>
+                                    <option value="todos">All</option>
+                                    <option value="A1">level A1</option>
+                                    <option value="A2">level A2</option>
+                                    <option value="B1">level B1</option>
+                                    <option value="B2">level B2</option>
+                                    <option value="C1">level C1</option>
+                                </select>
                                 <div class="uk-overflow-auto">
                                 <h:form id="formulario-tabla-actividades">
                                     <h:dataTable id="tabla-actividades"
@@ -262,6 +273,10 @@
                 });
             }
         </script>
+
+    </ui:define>
+    <ui:define name="file-js">
+        <h:outputScript library="js" name="/profesor/tarea-alumno-tabla.js"/>
     </ui:define>
 </ui:composition>
 
