--- a/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
@@ -40,7 +40,9 @@
         <ui:define name="contenido">
             <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/profesor/biblioteca-profesor.css"/>
             <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/profesor/scroll-profesor.css"/>
-            <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/profesor/asignar-actividad.css"/>
+<!--            <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/profesor/asignar-actividad.css"/>-->
+<!--            <h:outputStylesheet library="css" name="/profesor/asignar-actividad.css"/>-->
+            <link rel="stylesheet" href="#{resource['css/profesor/asignar-actividad.css']}"/>
             <h:outputStylesheet library="css" name="modal.css"/>
             <div class="uk-position-relative uk-margin-small-top" id="temario">
                 <div class="uk-position-absolute uk-animation-slide-top-medium">
@@ -90,19 +92,19 @@
                             <h:panelGroup layout="block" styleClass="card-actividad #{actividadModelo.nivelLenguaje}" >
                                 <div class="uk-card uk-card-default uk-card-small uk-card-hover card-border">
                                     <div class="uk-card-header border-card">
-                                        <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-text-small" pt:uk-grid="">
+                                        <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-text-small personitas" pt:uk-grid="">
                                             <div class="uk-width-expand">
                                                 <img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/mounstro/3ojos.svg" alt="3ojos" width="30" height="30" style="border-radius: 150px"/>
-                                                <span class="cat-txt ">#{actividadModelo.nivelLenguaje}</span>
+                                                <span class="cat-txt">#{actividadModelo.nivelLenguaje}</span>
                                                 <span class="uk-text-center">#{actividadModelo.tema}</span>
                                                 <h:outputText rendered="#{actividadModelo.totalTareas ne null}" pt:uk-icon="icon : users" pt:uk-tooltip="#{actividadModelo.totalTareas} -times assigned."/>
                                             </div>
-                                            <div class="uk-width-auto uk-text-right uk-text-muted">
-                                                <input type="radio" name="#{actividadModelo.nivelLenguaje}" class="uk-radio" value="#{actividadModelo.idActividad}"/>
-
+                                            <div class="uk-width-auto uk-text-right uk-text-muted alinear">
+                                                <input type="radio" name="#{actividadModelo.nivelLenguaje}" class="uk-radio" value="#{actividadModelo.idActividad}" onClick="activa()"/>
+                                                <input class="uk-checkbox" type="checkbox"></input>
                                             </div>
                                             <div>
-                                                <input class="uk-checkbox" type="checkbox"></input>
+
                                             </div>
                                         </h:panelGroup>
                                     </div>
