ahora cuando selecciona una tarea se selecccionan los check box para poder ver tarea

--- a/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
@@ -101,7 +101,7 @@
                                                 <h:outputText rendered="#{actividadModelo.totalTareas ne null}" pt:uk-icon="icon : users" pt:uk-tooltip="#{actividadModelo.totalTareas} -times assigned."/>
                                             </div>
                                             <div class="uk-width-auto uk-text-right uk-text-muted alinear">
-                                                <input type="radio" name="#{actividadModelo.nivelLenguaje}" class="uk-radio" value="#{actividadModelo.idActividad}" onClick="activa()"/>
+                                                <input type="radio" name="#{actividadModelo.nivelLenguaje}" class="uk-radio" value="#{actividadModelo.idActividad}"/>
                                                 <input class="uk-checkbox" type="checkbox"></input>
                                             </div>
                                             <div>
