--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -145,7 +145,8 @@
                                 <h:panelGroup layout="block" styleClass="uk-dropdown" pt:uk-dropdown="boundary:.tabla-alumnos; mode: click" id="dropear" >
                                     <ul class="uk-nav uk-dropdown-nav uk-text-left">
                                         <li>
-                                            <h:link outcome="detalle-alumno">
+                                            <h:link outcome="detalle-alumno" rendered="#{tareaAlumnoGrupoModelo.totalAsignadaMapaMental + tareaAlumnoGrupoModelo.totalAsignadaGramatica +
+                                                tareaAlumnoGrupoModelo.totalAsignadoRelacionar + tareaAlumnoGrupoModelo.totalAsignadaRelacionarOracion + tareaAlumnoGrupoModelo.totalAsignadaCompletar ne 0}">
                                                 <h:outputText pt:uk-icon="icon: file-edit" styleClass="uk-margin-small-right uk-icon uk-text-primary"/>
                                                 <span class="uk-text-middle uk-text-primary"><h:outputText value="#{etiqueta['detail']}"/></span>
                                                 <f:param name="idAlumno" value="#{tareaAlumnoGrupoModelo.id}"/>
