--- a/tecolotl-web/src/main/webapp/profesor/buzon.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/buzon.xhtml
@@ -4,6 +4,9 @@
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 xmlns:f="http://xmlns.jcp.org/jsf/core">
+<!--    <link rel="stylesheet" href="/resources/css/profesor/buzon.css"/>-->
+<!--    <link rel="stylesheet" href="#{resource['css/profesor/buzon.css']}"/>-->
+    <h:outputStylesheet library="css" name="/profesor/buzon.css"/>
     <ui:define name="menu">
         Menu
     </ui:define>
