--- a/tecolotl-web/src/main/webapp/coordinador/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/coordinador/dashboard.xhtml
@@ -1,15 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
-      xmlns:pa="http://xmlns.jcp.org/jsf/composite/paginacion">
-<ui:composition template="/template/administracion/dashboard.xhtml">
+<ui:composition template="/template/administracion/dashboard.xhtml"
+                xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+                xmlns:f="http://xmlns.jcp.org/jsf/core"
+                xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
+                xmlns:pa="http://xmlns.jcp.org/jsf/composite/paginacion">
 <ui:define name="menu"> </ui:define>
-<ui:define name="contenido"> </ui:define>
-
+<ui:define name="contenido">
+    Coordinador: #{coordinadorControladorLocal.coordinadorModelo.apodo}
+    <h:dataTable value="#{coordinadorDashboardControlador.profesorGrupoAlumnoModeloLista}"
+                 var="profesorGrupoAlumnoModelo">
+        <h:column>
+            <f:facet name="header">Nombre</f:facet>
+            ${profesorGrupoAlumnoModelo.nombre} ${profesorGrupoAlumnoModelo.apellidoPaterno} ${profesorGrupoAlumnoModelo.apellidoMaterno}
+        </h:column>
+        <h:column>
+            <f:facet name="header">Total grupo</f:facet>
+            ${profesorGrupoAlumnoModelo.totalGrupo}
+        </h:column>
+        <h:column>
+            <f:facet name="header">Total alumno</f:facet>
+            ${profesorGrupoAlumnoModelo.totalAlumno}
+        </h:column>
+    </h:dataTable>
+</ui:define>
 </ui:composition>
-</html>
