--- a/tecolotl-web/src/main/webapp/coordinador/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/coordinador/dashboard.xhtml
@@ -8,21 +8,64 @@
                 xmlns:pa="http://xmlns.jcp.org/jsf/composite/paginacion">
 <ui:define name="menu"> </ui:define>
 <ui:define name="contenido">
-    Coordinador: #{coordinadorControladorLocal.coordinadorModelo.apodo}
-    <h:dataTable value="#{coordinadorDashboardControlador.profesorGrupoAlumnoModeloLista}"
-                 var="profesorGrupoAlumnoModelo">
-        <h:column>
-            <f:facet name="header">Nombre</f:facet>
-            ${profesorGrupoAlumnoModelo.nombre} ${profesorGrupoAlumnoModelo.apellidoPaterno} ${profesorGrupoAlumnoModelo.apellidoMaterno}
-        </h:column>
-        <h:column>
-            <f:facet name="header">Total grupo</f:facet>
-            ${profesorGrupoAlumnoModelo.totalGrupo}
-        </h:column>
-        <h:column>
-            <f:facet name="header">Total alumno</f:facet>
-            ${profesorGrupoAlumnoModelo.totalAlumno}
-        </h:column>
-    </h:dataTable>
+    <section class="contenido">
+        <h:outputStylesheet library="css" name="/coordinador/coordinador.css"/>
+        <div class="informacion-profesor">
+            <div class="uk-card uk-card-default uk-card-body ">
+                <h:graphicImage library="img"  width="100" height="100" name="/avatar/coordinador.svg"/>
+                <h4 class="uk-margin-remove-bottom uk-margin-medium-top">Juan Coordinador Coordinador</h4>
+                <p class="uk-text-meta uk-margin-medium-top">#{coordinadorControladorLocal.coordinadorModelo.apodo}</p>
+            </div>
+        </div>
+        <div class="informacion-escuela">
+            <div>
+                <div class="encabezado">Star</div>
+                <div>sep 14 2020</div>
+            </div>
+            <div>
+                <div class="encabezado">End</div>
+                <div>sep 14 2021</div>
+            </div>
+            <div>
+                <div class="encabezado"> Escuela</div>
+                <div>Escuela De la 0</div>
+            </div>
+
+        </div>
+        <div class="tabla">
+
+            <h:dataTable value="#{coordinadorDashboardControlador.profesorGrupoAlumnoModeloLista}"
+                         var="profesorGrupoAlumnoModelo"
+                         styleClass="uk-table uk-table-hover uk-table-divider"
+                         headerClass="uk-background-primary"   >
+                <h:column>
+                    <f:facet name="header">Nombre</f:facet>
+                    ${profesorGrupoAlumnoModelo.nombre} ${profesorGrupoAlumnoModelo.apellidoPaterno} ${profesorGrupoAlumnoModelo.apellidoMaterno}
+                </h:column>
+                <h:column>
+                    <f:facet name="header">Total grupo</f:facet>
+                    ${profesorGrupoAlumnoModelo.totalGrupo}
+                </h:column>
+                <h:column>
+                    <f:facet name="header">Total alumno</f:facet>
+                    ${profesorGrupoAlumnoModelo.totalAlumno}
+                </h:column>
+                <h:column>
+                    <f:facet name="header">Opciones</f:facet>
+                    <button class="uk-icon-button" uk-icon="more-vertical"/>
+                    <h:panelGroup layout="block" styleClass="uk-dropdown" pt:uk-dropdown="mode: click; boundary: .uk-table">
+                        <ul class="uk-nav uk-dropdown-nav">
+                            <li class="uk-active"><a href="#">Active</a></li>
+                            <li><a href="#">Item</a></li>
+                            <li><a href="#">Item</a></li>
+                            <li><a href="#">Item</a></li>
+                        </ul>
+                    </h:panelGroup>
+                </h:column>
+            </h:dataTable>
+
+        </div>
+    </section>
+
 </ui:define>
 </ui:composition>
