se agrego cambio nombre coordinador

--- a/tecolotl-web/src/main/webapp/coordinador/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/coordinador/dashboard.xhtml
@@ -13,7 +13,7 @@
         <div class="informacion-profesor">
             <div class="uk-card uk-card-default uk-card-body ">
                 <h:graphicImage library="img"  width="100" height="100" name="/avatar/coordinador.svg"/>
-                <h4 class="uk-margin-remove-bottom uk-margin-medium-top">Juan Coordinador Coordinador</h4>
+                <h4 class="uk-margin-remove-bottom uk-margin-medium-top uk-text-center">Juan Coordinador Coordinador</h4>
                 <p class="uk-text-meta uk-margin-medium-top">#{coordinadorControladorLocal.coordinadorModelo.apodo}</p>
             </div>
         </div>
@@ -55,10 +55,8 @@
                     <button class="uk-icon-button" uk-icon="more-vertical"/>
                     <h:panelGroup layout="block" styleClass="uk-dropdown" pt:uk-dropdown="mode: click; boundary: .uk-table">
                         <ul class="uk-nav uk-dropdown-nav">
-                            <li class="uk-active"><a href="#">Active</a></li>
-                            <li><a href="#">Item</a></li>
-                            <li><a href="#">Item</a></li>
-                            <li><a href="#">Item</a></li>
+                            <li><a href="#">detalles</a></li>
+                            <li><a href="#">bloquear</a></li>
                         </ul>
                     </h:panelGroup>
                 </h:column>
