--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -46,6 +46,7 @@
 		<p><h:link  outcome="/profesor/dashboard.xhtml" value="Login Teachers"/></p>
 		<p><h:link  outcome="/alumno/dashboard.xhtml" value="Login Students"/></p>
 		<p><h:link  outcome="/administracion/dashboard.xhtml" value="Login Administration"/></p>
+		<p><h:link outcome="/coordinador/dashboard.xhtml" value="Login Coordinador"/> </p>
 	</div>
 	<div id="contenido">
 		<div id="inicio">
@@ -60,6 +61,7 @@
 							<h:link  outcome="/alumno/dashboard.xhtml" value="Login Students"/>
 						</li>
 						<li><h:link  outcome="/administracion/dashboard.xhtml" value="Login Administration"/></li>
+						<li><h:link outcome="/coordinador/dashboard.xhtml" value="Login Coordinador"/></li>
 					</ul>
 					<div>
 						<span><img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/landing/squadron.svg"  alt=""/>squadron</span>
