--- a/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
@@ -116,6 +116,7 @@
                     </h:panelGroup>
                 </h:form>
                 <div class="boton-reporte">
+                    <h:button outcome="buzon" value="#{profesor['mail.box']}" styleClass="boton-escuadron-base"/>
                     <button id="boton-reporte" class="boton-escuadron-base">#{profesor['report']}</button>
                 </div>
             </h:panelGroup>
