--- a/tecolotl-web/src/main/webapp/coordinador/reporte-sesion.xhtml
+++ b/tecolotl-web/src/main/webapp/coordinador/reporte-sesion.xhtml
@@ -13,16 +13,17 @@
         <h:outputStylesheet library="css" name="/coordinador/template-coordinador.css"/>
         <h:outputStylesheet library="css" name="datepicker.css"/>
         <div id="rango-fecha">
-            <input type="text" class="uk-input"/>
-            <span>to</span>
-            <input type="text" class="uk-input"/>
+            <h:form>
+                <h:inputText styleClass="uk-input"/>
+                <span>to</span>
+                <h:inputText styleClass="uk-input"/>
+            </h:form>
         </div>
     </ui:define>
     <ui:define name="file-js">
         <h:outputScript library="js" name="datepicker-full.js"/>
         <script >
             let datePicker = document.querySelector('#rango-fecha');
-
             let rango = new DateRangePicker(datePicker,{
                 format:"dd/mm/yyyy"
             });
